<resources>
    <string name="app_name">Tute03</string>
    <string name="hntName">Enter The Name</string>
    <string name="hntPassword">Enter The Password</string>
    <string name="btnLogin">Login</string>
    <string name="btnRegister">Register</string>
    <string name="btnForgetPassword">Forget Password</string>
    <string name="hntReEnterPassword">Re-Enter Password</string>
    <string name="hntEmail">Enter Email</string>
    <string name="btnSend">Send</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnSave">Save</string>
</resources>