<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="268dp"
        android:layout_height="313dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="4dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edtMAName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/hntName"
            android:inputType="textPersonName"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtMAPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/hntPassword"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnMALogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="openNewActivity"
            android:text="@string/btnLogin" />

        <Button
            android:id="@+id/btnMARegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="openNewActivity"
            android:text="@string/btnRegister" />

        <Button
            android:id="@+id/btnMAForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="openNewActivity"
            android:text="@string/btnForgetPassword" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>